@@ -170,6 +170,9 @@ Internationalization
       changed to remember the user's language selection when redisplaying the
       page following an error.
 
+    - Changed cmd_subscribe.py to properly accept (no)digest without a
+      password and to recognize (no)digest and address= case insensitively.
+
   Miscellaneous
 
     - Brad Knowles' mailman daily status report script updated to 0.0.17.
